# AndroidSecurityCheck

.emergent/: emergent.yml
android-root-detection/: AdvancedDetectionMethods.java  AdvancedRootDetection.java  AntiBypassDetection.java  Application.mk  CMakeLists.txt  CompleteIntegratedDetection.java  CompletePlaceholderImplementations.java  CompleteUsageExample.java  FinalCompleteExample.java  IntegratedAdvancedDetection.java  IntegratedSecurityManager.java  IntegrityVerification.java  NativeRootDetection.cpp  NativeRootDetection.java  README.md  SecurityTestSuite.java  ShamikoSpecificDetection.java  build.gradle  example-usage.md  proguard-security.pro
frontend/: .env
